--- a/index.html
+++ b/index.html
@@ -5,19 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechCreators</title>
-    <style>
-        body{
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>    
-    <h1>Coming soon...</h1>
+<body>
+    <nav>
+        <div></div>
+        <div class="input-div">
+            <img src="/Images/search.svg" alt="">
+            <input type="text" class="search-input" placeholder="Search for profile...">
+        </div>
+
+        <div class="img-div">
+            <a class="twitter-img" href="https://twitter.com/pushkaraj2007">
+                <img src="/Images/twitter.png" alt="">
+            </a>
+
+            <a href="https://github.com/pushkaraj2007/TechCreators">
+                <img class="github-img" src="/Images/github.png" alt="">
+            </a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="all-profiles-div">
+
+        </div>
+    </div>
 </body>
+    <script src="script.js"></script>
 </html>
