--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Creators — Best tech twitter creators, across the world.</title>
-    <link rel="stylesheet" href="styles/index.css" />
-  </head>
-  <body>
-    <nav>
-      <div></div>
-      <div class="input-div">
-        <img src="/assets/search.svg" alt="" />
-        <input
-          type="text"
-          class="search-input"
-          placeholder="Search for profile..."
-        />
-      </div>
 
-      <div class="img-div">
-        <a class="twitter-img" href="https://twitter.com/pushkaraj2007">
-          <img src="/assets/twitter.png" alt="" />
-        </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tech Creators — Best tech twitter creators, across the world.</title>
+  <link rel="stylesheet" href="styles/index.css" />
+</head>
 
-        <a href="https://github.com/pushkaraj2007/TechCreators">
-          <img class="github-img" src="/assets/github.png" alt="" />
-        </a>
-      </div>
-    </nav>
-
-    <div class="container">
-      <div class="all-profiles-div"></div>
+<body>
+  <nav>
+    <div></div>
+    <div class="input-div">
+      <img src="/assets/search.svg" alt="Search icon" />
+      <input type="text" class="search-input" placeholder="Search for profile..." />
     </div>
-  </body>
+
+    <div class="img-div">
+      <a class="twitter-img" href="https://twitter.com/pushkaraj2007" target="_blank" rel="noopener noreferrer">
+        <img src="/assets/twitter.png" alt="Twitter logo" />
+      </a>
+
+      <a href="https://github.com/pushkaraj2007/TechCreators" target="_blank" rel="noopener noreferrer">
+        <img class="github-img" src="/assets/github.png" alt="GitHub logo" />
+      </a>
+    </div>
+  </nav>
+  
+  <div class="container">
+    <div class="all-profiles-div"></div>
+    <div class="no-profile-div">
+      <p>No profile to show</p>
+    </div>
+  </div>
   <script src="scripts/app.js"></script>
+</body>
+
 </html>
