Favicon is added to the Website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tech Creators — Best tech twitter creators, across the world.</title>
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon.png">
   <link rel="stylesheet" href="styles/index.css" />
 </head>
 
