Added dark mode to the website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Tech Creators — Best tech twitter creators, across the world.</title>
   <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon.png">
   <link rel="stylesheet" href="styles/index.css" />
+  <script src="https://kit.fontawesome.com/9bd09bfeae.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,16 +20,21 @@
     </div>
 
     <div class="img-div">
-      <a class="twitter-img" href="https://twitter.com/pushkaraj2007" target="_blank" rel="noopener noreferrer">
-        <img src="/assets/twitter.png" alt="Twitter logo" />
-      </a>
+      <div class="rounded background-sun">
+        <i class="fa-solid fa-sun"></i>
+      </div>
 
-      <a href="https://github.com/pushkaraj2007/TechCreators" target="_blank" rel="noopener noreferrer">
-        <img class="github-img" src="/assets/github.png" alt="GitHub logo" />
-      </a>
+        <a class="twitter-img" href="https://twitter.com/pushkaraj2007" target="_blank" rel="noopener noreferrer">
+          <img src="/assets/twitter.png" alt="Twitter logo" />
+        </a>
+      
+        <a href="https://github.com/pushkaraj2007/TechCreators" target="_blank" rel="noopener noreferrer">
+          <img class="github-img" src="/assets/github.png" alt="GitHub logo" />
+        </a>
+      
     </div>
   </nav>
-  
+
   <div class="container">
     <div class="all-profiles-div"></div>
     <div class="no-profile-div">
