improved the ui of searchbar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
   <nav>
     <div></div>
     <div class="input-div">
-      <img src="/assets/search.svg" alt="Search icon" />
+
       <input type="text" class="search-input" placeholder="Search for profile..." />
+      <div class="search-icon-container">
+        <img src="/assets/search.svg" alt="Search icon" />
+      </div>
+
     </div>
 
     <div class="img-div">
@@ -24,14 +28,14 @@
         <i class="fa-solid fa-sun"></i>
       </div>
 
-        <a class="twitter-img" href="https://twitter.com/pushkaraj2007" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/twitter.png" alt="Twitter logo" />
-        </a>
-      
-        <a href="https://github.com/pushkaraj2007/TechCreators" target="_blank" rel="noopener noreferrer">
-          <img class="github-img" src="/assets/github.png" alt="GitHub logo" />
-        </a>
-      
+      <a class="twitter-img" href="https://twitter.com/pushkaraj2007" target="_blank" rel="noopener noreferrer">
+        <img src="/assets/twitter.png" alt="Twitter logo" />
+      </a>
+
+      <a href="https://github.com/pushkaraj2007/TechCreators" target="_blank" rel="noopener noreferrer">
+        <img class="github-img" src="/assets/github.png" alt="GitHub logo" />
+      </a>
+
     </div>
   </nav>
 
