Updated the new Twitter Logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <a class="twitter-img" href="https://twitter.com/pushkaraj2007" target="_blank" rel="noopener noreferrer">
-        <img src="/assets/twitter.png" alt="Twitter logo" />
+        <img src="/assets/X_Logo.png" alt="Twitter logo" />
       </a>
 
       <a href="https://github.com/pushkaraj2007/TechCreators" target="_blank" rel="noopener noreferrer">
