--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Tech Creators — Best tech twitter creators, across the world.</title>
   <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon.png">
   <link rel="stylesheet" href="styles/index.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <script src="https://kit.fontawesome.com/9bd09bfeae.js" crossorigin="anonymous"></script>
 </head>
 
@@ -45,6 +46,33 @@
       <p>No profile to show</p>
     </div>
   </div>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="row">
+        <!-- Add a "Contact Us" section here -->
+        <div class="footer-col">
+          <h4>Contact Us</h4>
+          <ul>
+            <li><p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@example.com">contact@example.com</a></p></li>
+            <li><p>Phone: +1 (123) 456-7890</p></li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <h4>Follow Us</h4>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="scripts/app.js"></script>
 </body>
 
