update twitter social icon to x

--- a/index.html
+++ b/index.html
@@ -1,79 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tech Creators — Best tech twitter creators, across the world.</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="assets/favicon.png"
+    />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/9bd09bfeae.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tech Creators — Best tech twitter creators, across the world.</title>
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon.png">
-  <link rel="stylesheet" href="styles/index.css" />
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <script src="https://kit.fontawesome.com/9bd09bfeae.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <nav>
-    <div></div>
-    <div class="input-div">
-
-      <input type="text" class="search-input" placeholder="Search for profile..." />
-      <div class="search-icon-container">
-        <img src="/assets/search.svg" alt="Search icon" />
+  <body>
+    <nav>
+      <div></div>
+      <div class="input-div">
+        <input
+          type="text"
+          class="search-input"
+          placeholder="Search for profile..."
+        />
+        <div class="search-icon-container">
+          <img src="/assets/search.svg" alt="Search icon" />
+        </div>
       </div>
 
-    </div>
-
-    <div class="img-div">
-      <div class="rounded background-sun">
-        <i class="fa-solid fa-sun"></i>
-      </div>
-
-      <a class="twitter-img" href="https://twitter.com/pushkaraj2007" target="_blank" rel="noopener noreferrer">
-        <img src="/assets/X_Logo.png" alt="Twitter logo" />
-      </a>
-
-      <a href="https://github.com/pushkaraj2007/TechCreators" target="_blank" rel="noopener noreferrer">
-        <img class="github-img" src="/assets/github.png" alt="GitHub logo" />
-      </a>
-
-    </div>
-  </nav>
-
-  <div class="container">
-    <div class="all-profiles-div"></div>
-    <div class="no-profile-div">
-      <p>No profile to show</p>
-    </div>
-  </div>
-
-  <footer class="footer">
-    <div class="footer-container">
-      <div class="row">
-        <!-- Add a "Contact Us" section here -->
-        <div class="footer-col">
-          <h4>Contact Us</h4>
-          <ul>
-            <li><p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@example.com">contact@example.com</a></p></li>
-            <li><p>Phone: +1 (123) 456-7890</p></li>
-          </ul>
+      <div class="img-div">
+        <div class="rounded background-sun">
+          <i class="fa-solid fa-sun"></i>
         </div>
 
-        <div class="footer-col">
-          <h4>Follow Us</h4>
-          <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+        <a
+          class="twitter-img"
+          href="https://twitter.com/pushkaraj2007"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="/assets/X_Logo.png" alt="Twitter logo" />
+        </a>
+
+        <a
+          href="https://github.com/pushkaraj2007/TechCreators"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img class="github-img" src="/assets/github.png" alt="GitHub logo" />
+        </a>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="all-profiles-div"></div>
+      <div class="no-profile-div">
+        <p>No profile to show</p>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="row">
+          <!-- Add a "Contact Us" section here -->
+          <div class="footer-col">
+            <h4>Contact Us</h4>
+            <ul>
+              <li>
+                <p>
+                  Email:
+                  <a
+                    href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@example.com"
+                    >contact@example.com</a
+                  >
+                </p>
+              </li>
+              <li><p>Phone: +1 (123) 456-7890</p></li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h4>Follow Us</h4>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-x"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-github"></i></a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <script src="scripts/app.js"></script>
-</body>
-
+    <script src="scripts/app.js"></script>
+  </body>
 </html>
